# rusty-vic20

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  PLAN.md  README.md  REFERENCES.md  WIP.md  rustfmt.toml  vic20-info-log.sh
.github/agents/: emulator-debugger.agent.md
.opencode/skills/find-missing-tests/: SKILL.md
benches/: run_bench.rs
docs/: REFERENCES.md  VIA.md
downloads/: Sargon-II-Chess.prg  space-phreaks.prg
programs/: README.md  annual.basic  biorhythms.basic  decode.basic  kaleido.basic  pi.basic  wari.basic
src/: addressable.rs  bus.rs  controller.rs  cpu.rs  cpu6502.rs  device.rs  instructions.rs  keyboard.rs  lib.rs  main.rs  memory.rs  paste.rs  scheduled_operation.rs  screen.rs  tools.rs  via.rs  via2.rs  vic.rs  virtual_clock.rs
src/cpu/: addressing_mode.rs  cpu6502.rs  instruction_executor.rs  instruction_tracking.rs  instructions.rs  interrupt_handler.rs  registers.rs
src/debug/: display.rs  mod.rs
src/keyboard/: display.rs  mod.rs
src/screen/: display.rs  framebuffer.rs  renderer.rs
src/tools/: debug.rs  disassembler.rs
src/ui/: mod.rs  speaker.rs  tape.rs
src/ui/keyboard/: display.rs  key.rs  mod.rs
src/ui/screen/: display.rs  renderer.rs
tests/: check_cursor.rs  keyboard_test.rs  smoke_test.rs
