[package]
name = "rusty-vic20"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3"
cpal = "0.17.3"
env_logger = "0.11.10"
font8x8 = "0.3.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
log = "0.4.29"
maplit = "1.0.2"
pixels = "0.17.1"
rfd = "0.15"
sigpipe = "0.1.3"
winit = "0.30.13"

[dev-dependencies]
rstest = "0.26.1"
unimock = "0.6.8"

[[bench]]
name = "run_bench"
